Input bg color changed

--- a/style.css
+++ b/style.css
@@ -40,25 +40,28 @@ h4 {
     height: 3rem;
 }
 
-#search-input {
+.search-input {
     width: 55%;
     border-radius: 15px;
     border: none;
     margin-right: 2%;
     padding-left: 3%;
-    background-color: rgb(185, 184, 184);
     font-weight: 700;
+}
+
+input[type="text"], textarea {
+    background-color: #b9b8b8;
 }
 
 ::placeholder {
     padding-left: 10%;
 }
 
-#search-button {
+.search-button {
     width: 2.5rem;
     background: url(icons8-search-26.png);
     background-repeat: no-repeat;
-    background-color: rgb(185, 184, 184);
+    background-color: #b9b8b8;
     background-position: center;
     border-radius: 15px;
     border: none;
@@ -66,7 +69,7 @@ h4 {
 }
 
 #recipes {
-    color: white;
+    color: #ffffff;
     padding: 20px;
     /* background-color: rgba(0, 0, 0, 0.7); */
     height: auto;
@@ -148,6 +151,10 @@ footer {
     .dish-recipe {
         font-size: 1rem;
     }
+
+    .dish-text {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -166,13 +173,13 @@ footer {
         height: 100%;
     }
 
-    #search-input {
+    .search-input {
         margin: .8rem;
         height: 3em;
         width: 100%;
     }
 
-    #search-button {
+    .search-button {
         width: 3.5rem;
         height: 3.5rem;
         border-radius: 30px;
