--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h4 {
     height: 3rem;
 }
 
-.search-input {
+#search-input {
     width: 55%;
     border-radius: 15px;
     border: none;
@@ -57,7 +57,7 @@ input[type="text"], textarea {
     padding-left: 10%;
 }
 
-.search-button {
+#search-button {
     width: 2.5rem;
     background: url(icons8-search-26.png);
     background-repeat: no-repeat;
@@ -173,13 +173,13 @@ footer {
         height: 100%;
     }
 
-    .search-input {
+    #search-input {
         margin: .8rem;
         height: 3em;
         width: 100%;
     }
 
-    .search-button {
+    #search-button {
         width: 3.5rem;
         height: 3.5rem;
         border-radius: 30px;
